--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,28 @@
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+}
+  
+
+::-webkit-scrollbar-track {
+    background: var(--darkgreen);
+}
+  
+
+::-webkit-scrollbar-thumb {
+    background: var(--lightgreen);
+    border-radius: 10px;
+}
+  
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--normgreen);
+}
+
+
 /*-----------------------Sections-----------------------*/
-
-
 .header {
     min-height: 125vh;
     background-image: url('../bäume/headerback.jpg');
@@ -34,9 +53,6 @@
     font-family: 'Poppins', sans-serif;
     color: #fff;
     text-align: center;
-    font-size: 40px;
-    place-content: center;
-    justify-content: center;
     background: linear-gradient(var(--normgreen), var(--darkgreen));
 }
 
@@ -68,6 +84,51 @@
 
 
 
+/*Donate now reminder*/
+
+.donatenow {
+    position: fixed;
+    bottom: 35px;
+    right: 80px;
+    margin-left: 20px;
+    width: 300px;
+    z-index: 9999;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 10px;
+    box-shadow: 5px 10px 208px #fff;
+  }
+  
+  .donatenow-header {
+    padding: 25px 15px;
+    background: var(--darkgreen);
+    font-size: 30px;
+    color: white;
+  }
+  
+  .donatenow-container {
+    padding: 15px;
+    background-color: var(--lightgreen);
+    color: #fff;
+  }
+
+  .donatenow-container a {
+    text-shadow: none;
+    text-decoration: underline;
+  }
+  
+  .donatenowbtn {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    color: var(--lightgreen);
+    font-size: 30px;
+    cursor: pointer;
+  }
+  
+  .donatenowbtn:hover {
+    color: lightgrey;
+  }
+
 
 
 /*Navbar*/
@@ -91,7 +152,7 @@ a {
     text-decoration: none;
     font-weight: 700;
     user-select: var(--darkgreen);
-    z-index: 9999;
+    z-index: 999999999;
     text-shadow: 2px 2px 5px #000;
     transition: .5s;
 }
@@ -129,6 +190,12 @@ a:hover {
     color: rgb(72, 255, 0);
     margin-left: 20px;
     border-left: 4px solid rgb(51, 255, 0);
+}
+
+.don:hover {
+    color: rgb(72, 255, 0);
+    margin-left: 20px;
+    border-left: 4px solid #458A40;
 }
 
 /*Überschrift*/
@@ -222,6 +289,34 @@ a:hover {
 }
 
 
+/*Scroll*/
+
+.scroll-down {
+    height: 80px;
+    width: 80px;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    border-radius: 10px;
+    position: absolute;
+    z-index: 99999;
+    top: 69%;
+    left: 22%;
+    transform: translate(-50%,-50%);
+    animation: scroll infinite 2s linear;
+}
+
+
+.scroll-down img {
+    height: 50px;
+    width: 40px;
+    display: grid;
+    place-content: center;
+    color: #fff;
+    filter: invert(100%);
+    margin: auto;
+}
 
 
 /*extra*/
@@ -236,6 +331,7 @@ a:hover {
     width: 100%;
     background: linear-gradient( transparent, transparent,  var(--normgreen));
 }
+
 
 .active {
     padding-top: 5px;
@@ -263,6 +359,10 @@ mark {
 
 
 
+
+
+
+
 /*-----------------------MEDIA QUERIES-----------------------*/
 
 @media only screen and (max-width: 600px) {
@@ -272,6 +372,10 @@ mark {
 
     .header {
         min-height: 100vh;
+    }
+    
+    .donatenow {
+        display: none;
     }
 
 
@@ -355,7 +459,35 @@ mark {
         overflow: hidden;
         border-radius: 5px;
     }
+    
 
+    /*Scroll*/
+
+.scroll-down {
+    height: 80px;
+    width: 80px;
+    background-color: #000;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    border-radius: 10px;
+    position: absolute;
+    z-index: 999;
+    top: 90%;
+    left: 40%;
+    transform: translate(-50%,-50%);
+    animation: scroll infinite 2s linear;
+}
+
+.scroll-down img {
+    height: 50px;
+    width: 40px;
+    display: grid;
+    place-content: center;
+    color: #fff;
+    filter: invert(100%);
+    margin: auto;
+}
 
     /*Extra*/
     .left-img{
@@ -372,3 +504,14 @@ mark {
         min-height: 100vh;
     }
   }
+
+
+
+/*-----------------------ANIMATIONS-----------------------*/
+
+
+@keyframes scroll {
+    0%   {transform: translateY(-5px);}
+    50% {transform: translateY(5px);}
+    100%   {transform: translateY(-5px);}
+}
