--- a/css/thankyou.css
+++ b/css/thankyou.css
@@ -16,6 +16,28 @@
     font-family: 'Poppins', sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+}
+  
+
+::-webkit-scrollbar-track {
+    background: var(--darkgreen);
+}
+  
+
+::-webkit-scrollbar-thumb {
+    background: var(--lightgreen);
+    border-radius: 10px;
+}
+  
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--normgreen);
+}
+
+/*-----------------------------------------------*/
+
 .thank-you-img {
     top: 40%;
     left: 50%;
